--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,6 @@
+= Note -- This is a patched version of ActiveRecord 3.2.14 meant to talk to AWS Redshift
+
+
 = Active Record -- Object-relational mapping put on rails
 
 Active Record connects classes to relational database tables to establish an
